--- a/src/index.html
+++ b/src/index.html
@@ -88,7 +88,7 @@
         </form>
       </div>
       <div style="flex: 1; border: 1px solid black; padding: 10px 20px">
-        <h3>Signin</h3>
+        <h3>Register</h3>
         <form id="registerForm" method="post">
           <div>
             <label for="name">Name</label>
